changed all our collection removed quick links from all added call for price on modals

--- a/Carpets/nav/abingdon_lovestory.html
+++ b/Carpets/nav/abingdon_lovestory.html
@@ -352,7 +352,7 @@
       </div>
     </section>
     <section id="carpet-gallery">
-      <h2 style="text-align: center; margin: 2rem 0">Our Cormar Collection</h2>
+      <h2 style="text-align: center; margin: 2rem 0">Our Abingdon Collection</h2>
       <div class="grid" id="carpetGrid"></div>
     </section>
     <div id="pagination" class="pagination-controls">
@@ -367,44 +367,15 @@
         <span id="modalClose" class="close">&times;</span>
         <img id="modalImage" src="" alt="" />
         <h3 id="modalName"></h3>
-        <div id="modalInfo"></div>
+        <div class="price-enquiry">
+          <h2>Price Enquiry</h2>
+          <a href="tel:+447552064348" class="call-us-btn">Call Us</a>
+        </div>
       </div>
     </div>
 
     <!-- ⬇️ Moved OUTSIDE of the modal ⬇️ -->
-    <section class="quick-links">
-      <div class="quick-top-wrapper">
-        <img src="../../Photos/Logo.png" alt="Plumbing Pro Logo" />
-        <h1>Trust Plumbing Pro 24/7 Available</h1>
-      </div>
-
-      <div class="quick-bottom-wrapper">
-        <div class="service">
-          <h2>Services</h2>
-          <hr />
-          <ul>
-            <li><a href="./Bathroom.html">Bathroom</a></li>
-            <li><a href="./Kitchen.html">Kitchen</a></li>
-            <li><a href="./Drainage.html">Drainage</a></li>
-            <li><a href="./Heating.html">Heating</a></li>
-            <li><a href="./Emergency.html">Emergency</a></li>
-            <li><a href="./Maintenance.html">Maintenance</a></li>
-          </ul>
-        </div>
-
-        <div class="quick-link">
-          <h2>Quick Links</h2>
-          <hr />
-          <ul>
-            <li><a href="./Contact.html">Contact</a></li>
-            <li><a href="./About.html">About Us</a></li>
-            <li><a href="./Pricing.html">Pricing</a></li>
-            <li><a href="./Reviews.html">Reviews</a></li>
-            <li><a href="./FAQ.html">FAQ</a></li>
-          </ul>
-        </div>
-      </div>
-    </section>
+  
 
     <footer class="footer">
       <div class="footer-content">
