--- a/Carpets/nav/therdex.html
+++ b/Carpets/nav/therdex.html
@@ -340,17 +340,17 @@
         <h1>Therdex</h1>
         <hr />
         <p>
-          The Cormar Riva range is a contemporary carpet collection designed for
-          both style and practicality. Made from durable, easy-care fibres, Riva
-          carpets offer a soft and comfortable feel underfoot while being
-          resistant to everyday wear and stains. With a wide selection of
-          colours and textures, the Riva line brings modern elegance and
-          long-lasting performance to homes across the UK.
+          The Therdex collection is a premium range of luxury vinyl flooring that blends
+          natural aesthetics with advanced performance. Designed to replicate the beauty
+          of wood and stone, Therdex floors offer exceptional durability, water
+          resistance, and low maintenance, making them ideal for both residential and
+          commercial spaces. With a wide variety of finishes and textures, Therdex
+          provides timeless elegance and long-lasting quality for any interior.
         </p>
       </div>
     </section>
     <section id="carpet-gallery">
-      <h2 style="text-align: center; margin: 2rem 0">Our Cormar Collection</h2>
+      <h2 style="text-align: center; margin: 2rem 0">Our Therdex Collection</h2>
       <div class="grid" id="carpetGrid"></div>
     </section>
     <div id="pagination" class="pagination-controls">
@@ -365,44 +365,15 @@
         <span id="modalClose" class="close">&times;</span>
         <img id="modalImage" src="" alt="" />
         <h3 id="modalName"></h3>
-        <div id="modalInfo"></div>
+        <div class="price-enquiry">
+          <h2>Price Enquiry</h2>
+          <a href="tel:+447552064348" class="call-us-btn">Call Us</a>
+        </div>
       </div>
     </div>
 
     <!-- ⬇️ Moved OUTSIDE of the modal ⬇️ -->
-    <section class="quick-links">
-      <div class="quick-top-wrapper">
-        <img src="../../Photos/Logo.png" alt="Plumbing Pro Logo" />
-        <h1>Trust Plumbing Pro 24/7 Available</h1>
-      </div>
-
-      <div class="quick-bottom-wrapper">
-        <div class="service">
-          <h2>Services</h2>
-          <hr />
-          <ul>
-            <li><a href="./Bathroom.html">Bathroom</a></li>
-            <li><a href="./Kitchen.html">Kitchen</a></li>
-            <li><a href="./Drainage.html">Drainage</a></li>
-            <li><a href="./Heating.html">Heating</a></li>
-            <li><a href="./Emergency.html">Emergency</a></li>
-            <li><a href="./Maintenance.html">Maintenance</a></li>
-          </ul>
-        </div>
-
-        <div class="quick-link">
-          <h2>Quick Links</h2>
-          <hr />
-          <ul>
-            <li><a href="./Contact.html">Contact</a></li>
-            <li><a href="./About.html">About Us</a></li>
-            <li><a href="./Pricing.html">Pricing</a></li>
-            <li><a href="./Reviews.html">Reviews</a></li>
-            <li><a href="./FAQ.html">FAQ</a></li>
-          </ul>
-        </div>
-      </div>
-    </section>
+   
 
     <footer class="footer">
       <div class="footer-content">
