--- a/Carpets/nav/aboutus.html
+++ b/Carpets/nav/aboutus.html
@@ -331,6 +331,7 @@
 </ul>
 </div>
   </header>
+  <section class="about-us">
     <section class="about">
       <div class="content">
         <h1>About Us</h1>
@@ -378,7 +379,7 @@
         </p>
       </div>
     </section>
-
+  </section>
     <section class="values">
       <h1>Why Choose Us?</h1>
       <div class="values-boxes">
