--- a/Carpets/nav/megatex.html
+++ b/Carpets/nav/megatex.html
@@ -335,13 +335,13 @@
     <section class="hero">
       <img src="../../Photos/sisal/Seagrass.png" alt="Sisal Carpets" />
       <div class="title-desc">
-        <h1>Sisal & Seagrass</h1>
+        <h1>Rio Megatex</h1>
         <hr />
         <p>
-          Sisal & Seagrass carpets offer a natural, eco-friendly alternative for
-          flooring, made from plant-based fibers. These collections bring a
-          warm, organic texture to interiors while remaining durable and easy to
-          maintain — perfect for adding rustic charm and sophistication to any
+          Rio Mega Tex carpets combine durability with contemporary design, offering a
+          versatile flooring solution for modern interiors. Crafted with high-quality
+          fibers, these collections deliver comfort underfoot while maintaining strength
+          and resilience — perfect for creating a stylish, long-lasting finish in any
           room.
         </p>
       </div>
@@ -349,7 +349,7 @@
 
     <section id="carpet-gallery">
       <h2 style="text-align: center; margin: 2rem 0">
-        Our Sisal & Seagrass Collection
+        Our Rio Megatex Collection
       </h2>
       <div class="grid" id="carpetGrid"></div>
     </section>
@@ -364,43 +364,14 @@
         <span id="modalClose" class="close">&times;</span>
         <img id="modalImage" src="" alt="Carpet Preview" />
         <h3 id="modalName"></h3>
-        <div id="modalInfo"></div>
+        <div class="price-enquiry">
+          <h2>Price Enquiry</h2>
+          <a href="tel:+447552064348" class="call-us-btn">Call Us</a>
+        </div>
       </div>
     </div>
     <!-- ⬇️ Moved OUTSIDE of the modal ⬇️ -->
-    <section class="quick-links">
-      <div class="quick-top-wrapper">
-        <img src="../../Photos/Logo.png" alt="Plumbing Pro Logo" />
-        <h1>Trust Plumbing Pro 24/7 Available</h1>
-      </div>
-
-      <div class="quick-bottom-wrapper">
-        <div class="service">
-          <h2>Services</h2>
-          <hr />
-          <ul>
-            <li><a href="./Bathroom.html">Bathroom</a></li>
-            <li><a href="./Kitchen.html">Kitchen</a></li>
-            <li><a href="./Drainage.html">Drainage</a></li>
-            <li><a href="./Heating.html">Heating</a></li>
-            <li><a href="./Emergency.html">Emergency</a></li>
-            <li><a href="./Maintenance.html">Maintenance</a></li>
-          </ul>
-        </div>
-
-        <div class="quick-link">
-          <h2>Quick Links</h2>
-          <hr />
-          <ul>
-            <li><a href="./Contact.html">Contact</a></li>
-            <li><a href="./About.html">About Us</a></li>
-            <li><a href="./Pricing.html">Pricing</a></li>
-            <li><a href="./Reviews.html">Reviews</a></li>
-            <li><a href="./FAQ.html">FAQ</a></li>
-          </ul>
-        </div>
-      </div>
-    </section>
+   
 
     <footer class="footer">
       <div class="footer-content">
