fixed mobile spacing on the about us and fixed height on the mobile content on home page also changed contact info on the contact page

--- a/Contact/contact-us.html
+++ b/Contact/contact-us.html
@@ -362,11 +362,11 @@
               </div>
               <div class="information">
                 <img src="../Photos/icons/email.png" class="icon" alt="" />
-                <p>lorem@ipsum.com</p>
+                <p>info@supremecarpets.uk</p>
               </div>
               <div class="information">
                 <img src="../Photos/icons/phone.png" class="icon" alt="" />
-                <p>020-3490-2346</p>
+                <p>07552 0664348</p>
               </div>
             </div>
           </div>
