added whats app to all pages

--- a/Contact/contact-us.html
+++ b/Contact/contact-us.html
@@ -430,6 +430,9 @@
         </div>
       </div>
     </section>
+    <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-2d510061-5b92-482f-8f98-d57e9bc05f72" data-elfsight-app-lazy></div>
  
   </body>
   <script src="contact.js"></script>
