--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             <h2>Elevate your living space</h2>
             <p>Explore our supreme Carpets</p>
           </div>
-          <button class="catalogue">Check Out Our Selection</button>
+ 
         </div>
 
         <div class="reviews-container visible" id="review-box">
@@ -368,8 +368,8 @@
       <div class="hero-mobile-content">
         <div class="cta-mobile">
           <h2>Elevate your living space</h2>
-          <p>Explore our supreme Carpets</p>
-          <button class="catalogue">Check Out Our Selection</button>
+         
+  
 
           <!-- ✅ Injected Reviews -->
           <div class="reviews-container-mobile visible" id="review-box-mobile">
@@ -560,6 +560,9 @@
           </ul>
         </div>
       </div>
+      <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-2d510061-5b92-482f-8f98-d57e9bc05f72" data-elfsight-app-lazy></div>
 
       <div class="location foot-column">
         <h2 class="foot-title location-title">Find Us</h2>
