--- a/Carpets/nav/hughmackay.html
+++ b/Carpets/nav/hughmackay.html
@@ -373,6 +373,10 @@
 
     <!-- ⬇️ Moved OUTSIDE of the modal ⬇️ -->
    
+<!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-2d510061-5b92-482f-8f98-d57e9bc05f72" data-elfsight-app-lazy></div>
+
     <footer class="footer">
       <div class="footer-content">
         <p class="footer-top">
