--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Desktop Menu -->
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="../../Contact/contact-us.html" class="navbar__links"
+            <a href="Contact/contact-us.html" class="navbar__links"
               >Book Appointment</a
             >
           </li>
