--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               </li>
             </ul>
           </li>
-          <img src="../../Photos/Logo.png" class="sc-logo" alt="websitelogo" />
+          <img src="Photos/Logo.png" class="sc-logo" alt="websitelogo" />
           <li class="navbar__item">
             <a href="Carpets/nav/gallery.html" class="navbar__links"
               >Gallery</a
