--- a/Carpets/nav/victoria_engine.html
+++ b/Carpets/nav/victoria_engine.html
@@ -381,11 +381,9 @@
           © 2025 Supreme W2 Carpets. All Rights Reserved.
           <a href="../../privacy.html">Privacy Policy</a>
         </p>
-
         <p class="footer-info">
-          Registered Office: Suite G04, 1 Quality Court, Chancery Lane, London,
-          WC2A 1HR<br />
-          Registered in England and Wales | Company No: 15347370
+          Registered Office: 27 Grasmere Avenue, London, W3 6JT<br />
+          Registered in England and Wales | Company No: 09374347
         </p>
 
         <p class="footer-link">
