--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
     <!-- Offscreen Menu for mobile -->
  <!-- Offscreen Menu for mobile -->
  <div class="off-screen">
+  
  <ul class="mmenu">
   <!-- Book Appointment -->
   <li class="menu-item"><a href="Contact/contact-us.html" class="btn">Book Appointment</a></li>
@@ -341,6 +342,7 @@
         <img src="Photos/Mac/Carpet1-mac.png" class="slide active" />
         <img src="Photos/Mac/Carpet3-mac.png" class="slide" />
         <img src="Photos/Mac/Carpet2-mac.png" class="slide" />
+
       </div>
 
       <!-- Wrap cta + reviews together -->
@@ -437,6 +439,8 @@
         <img src="Photos/toppic.png" class="slide-mobile active" />
         <img src="Photos/Adel/7FC278D2-C776-40E8-8ECD-BD663B045FC5.png" class="slide-mobile" />
         <img src="Photos/midpic.png" class="slide-mobile" />
+        <img src="photo.png" class="slide-mobile" />
+
       </div>
     </section>
 
@@ -593,13 +597,9 @@
           Registered in England and Wales | Company No: 15347370
         </p>
 
-        <p class="footer-link">
-          <a
-            href="https://find-and-update.company-information.service.gov.uk/company/09374347"
-            target="_blank"
-            rel="noopener noreferrer">
-            View on Companies House
-          </a>
+        <p class="footer-info">
+          Registered Office: 27 Grasmere Avenue, London, W3 6JT<br />
+          Registered in England and Wales | Company No: 09374347
         </p>
       </div>
     </footer>
