--- a/Carpets/nav/herringbone.html
+++ b/Carpets/nav/herringbone.html
@@ -376,10 +376,8 @@
     </div>
     <!-- ⬇️ Moved OUTSIDE of the modal ⬇️ -->
     
-<!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
-<script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-2d510061-5b92-482f-8f98-d57e9bc05f72" data-elfsight-app-lazy></div>
 
+    
     <footer class="footer">
       <div class="footer-content">
         <p class="footer-top">
@@ -388,9 +386,8 @@
         </p>
 
         <p class="footer-info">
-          Registered Office: Suite G04, 1 Quality Court, Chancery Lane, London,
-          WC2A 1HR<br />
-          Registered in England and Wales | Company No: 15347370
+          Registered Office: 27 Grasmere Avenue, London, W3 6JT<br />
+          Registered in England and Wales | Company No: 09374347
         </p>
 
         <p class="footer-link">
