--- a/Contact/contact-us.html
+++ b/Contact/contact-us.html
@@ -180,7 +180,7 @@
                 </li>
               </ul>
             </li>
-            <a href="../../index.html"><img src="../Photos/Logo.png" class="sc-logo" alt="websitelogo" /></a>
+            <a href="../index.html"><img src="../Photos/Logo.png" class="sc-logo" alt="websitelogo" /></a>
 
             <li class="navbar__item">
               <a href="../Carpets/nav/gallery.html" class="navbar__links"
