--- a/privacy.html
+++ b/privacy.html
@@ -200,6 +200,7 @@
       <!-- Offscreen Menu for mobile -->
    <!-- Offscreen Menu for mobile -->
    <div class="off-screen">
+    
    <ul class="mmenu">
     <!-- Book Appointment -->
     <li class="menu-item"><a href="../../Contact/contact-us.html" class="btn">Book Appointment</a></li>
@@ -403,9 +404,8 @@
         </p>
 
         <p class="footer-info">
-          Registered Office: Suite G04, 1 Quality Court, Chancery Lane, London,
-          WC2A 1HR<br />
-          Registered in England and Wales | Company No: 15347370
+          Registered Office: 27 Grasmere Avenue, London, W3 6JT<br />
+          Registered in England and Wales | Company No: 09374347
         </p>
 
         <p class="footer-link">
