Update v1.0.0 -> Added mobile van image removed all mention of twist 5050 fixed victoria universal json for the name of the flooring

--- a/Carpets/nav/abingdon_berber.html
+++ b/Carpets/nav/abingdon_berber.html
@@ -180,7 +180,7 @@
                     <li><a href="looped_c.html" class="dropdown__link">Looped</a></li>
                     <li><a href="abingdon_berber.html" class="dropdown__link">Berber</a></li>
                     <li><a href="hamp_wool.html" class="dropdown__link">Twist 80/20</a></li>
-                    <li><a href="twist5050.html" class="dropdown__link">Twist 50/50</a></li>
+                    <li><a href="twist5050.html" class="dropdown__link">50/50</a></li>
 
 
                   </ul>
@@ -322,7 +322,7 @@
             <li><a href="looped_c.html" class="dropdown__link">Looped</a></li>
             <li><a href="abingdon_berber.html" class="dropdown__link">Berber</a></li>
             <li><a href="hamp_wool.html" class="dropdown__link">Twist 80/20</a></li>
-            <li><a href="twist5050.html" class="dropdown__link">Twist 50/50</a></li>
+            <li><a href="twist5050.html" class="dropdown__link">50/50</a></li>
           </ul>
         </li>
       </ul>
