--- a/Contact/contact-us.html
+++ b/Contact/contact-us.html
@@ -173,7 +173,7 @@
                     <li><a href="../Carpets/nav/looped_c.html" class="dropdown__link">Looped</a></li>
                     <li><a href="../Carpets/nav/abingdon_berber.html" class="dropdown__link">Berber</a></li>
                     <li><a href="../Carpets/nav/hamp_wool.html" class="dropdown__link">Twist 80/20</a></li>
-                    <li><a href="../Carpets/nav/twist5050.html" class="dropdown__link">Twist 50/50</a></li>
+                    <li><a href="../Carpets/nav/twist5050.html" class="dropdown__link">50/50</a></li>
   
   
                   </ul>
@@ -316,7 +316,7 @@
             <li><a href="../Carpets/nav/looped_c.html" class="dropdown__link">Looped</a></li>
             <li><a href="../Carpets/nav/abingdon_berber.html" class="dropdown__link">Berber</a></li>
             <li><a href="../Carpets/nav/hamp_wool.html" class="dropdown__link">Twist 80/20</a></li>
-            <li><a href="../Carpets/nav/twist5050.html" class="dropdown__link">Twist 50/50</a></li>
+            <li><a href="../Carpets/nav/twist5050.html" class="dropdown__link">50/50</a></li>
           </ul>
         </li>
       </ul>
