--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                   <li><a href="Carpets/nav/looped_c.html" class="dropdown__link">Looped</a></li>
                   <li><a href="Carpets/nav/abingdon_berber.html" class="dropdown__link">Berber</a></li>
                   <li><a href="Carpets/nav/hamp_wool.html" class="dropdown__link">Twist 80/20</a></li>
-                  <li><a href="Carpets/nav/twist5050.html" class="dropdown__link">Twist 50/50</a></li>
+                  <li><a href="Carpets/nav/twist5050.html" class="dropdown__link">50/50</a></li>
 
 
                 </ul>
@@ -319,7 +319,7 @@
           <li><a href="Carpets/nav/looped_c.html" class="dropdown__link">Looped</a></li>
           <li><a href="Carpets/nav/abingdon_berber.html" class="dropdown__link">Berber</a></li>
           <li><a href="Carpets/nav/hamp_wool.html" class="dropdown__link">Twist 80/20</a></li>
-          <li><a href="Carpets/nav/twist5050.html" class="dropdown__link">Twist 50/50</a></li>
+          <li><a href="Carpets/nav/twist5050.html" class="dropdown__link">50/50</a></li>
         </ul>
       </li>
     </ul>
@@ -378,6 +378,11 @@
             <!-- JS will inject reviews here -->
           </div>
         </div>
+        <img
+          src="Photos/mobilevan.png"
+          class="mobile-hero-img2"
+          alt="Mobile Hero" />
+      </div>
       </div>
     </section>
 
