--- a/Carpets/nav/gallery.html
+++ b/Carpets/nav/gallery.html
@@ -173,7 +173,7 @@
                   <li><a href="looped_c.html" class="dropdown__link">Looped</a></li>
                   <li><a href="abingdon_berber.html" class="dropdown__link">Berber</a></li>
                   <li><a href="hamp_wool.html" class="dropdown__link">Twist 80/20</a></li>
-                  <li><a href="twist5050.html" class="dropdown__link">Twist 50/50</a></li>
+                  <li><a href="twist5050.html" class="dropdown__link">50/50</a></li>
 
 
                 </ul>
@@ -315,7 +315,7 @@
           <li><a href="looped_c.html" class="dropdown__link">Looped</a></li>
           <li><a href="abingdon_berber.html" class="dropdown__link">Berber</a></li>
           <li><a href="hamp_wool.html" class="dropdown__link">Twist 80/20</a></li>
-          <li><a href="twist5050.html" class="dropdown__link">Twist 50/50</a></li>
+          <li><a href="twist5050.html" class="dropdown__link">50/50</a></li>
         </ul>
       </li>
     </ul>
